# leonardo_turtlebot

./: README.md  start_leonardo_turtle.sh
laptop_battery_monitor/: package.xml
laptop_battery_monitor/scripts/: laptop_battery.py
leonardo_bringup/: package.xml
leonardo_bringup/launch/: image_convert.launch  leonardo.launch
leonardo_bringup/map/: attic.pgm
src/auto_docking/: CMakeLists.txt  package.xml
src/auto_docking/scripts/: auto_docking_client.py
src/autodocking/: CMakeLists.txt  package.xml
src/laptop_battery_monitor/: CMakeLists.txt
src/laptop_battery_monitor/scripts/: DockDriveActionClient.py  laptop_battery.py
src/leonardo_battery_guard/: CMakeLists.txt  package.xml
src/leonardo_battery_guard/launch/: leonardo_battery_guard.launch
src/leonardo_battery_guard/scripts/: battery_guard.py
src/leonardo_bringup/: CMakeLists.txt  package.xml
src/leonardo_bringup/launch/: leonardo.launch  minimal.launch
src/leonardo_bringup/launch/includes/: robot.launch.xml
src/leonardo_bringup/map/: attic.yaml
src/leonardo_bringup/param/kobuki/: diagnostics.yaml
src/pr2_motors_analyzer/: CMakeLists.txt  package.xml  pr2_motors_analyzer_plugin.xml
src/pr2_motors_analyzer/include/pr2_motors_analyzer/: pr2_motors_analyzer.h
src/pr2_motors_analyzer/scripts/: pr2_power_pub.py  pr2_power_pub_estop_hit.py
src/pr2_motors_analyzer/src/: pr2_motors_analyzer.cpp
src/pr2_motors_analyzer/test/: pr2_motors_analyzer_load.yaml  test_estop_hit.launch  test_estop_ok.launch  test_pr2_motors_analyzer_load.launch
