<package>
  <name>auto_docking</name>
  <version>0.1.103</version>

  <description>
    The auto_docking package
  </description>
  <maintainer email="ecorbellini@ekumenlabs.com">Ernesto Corbellini</maintainer>
  <maintainer email="jmateu@ekumenlabs.com">Julian Mateu</maintainer>
  <maintainer email="ptula@ekumenlabs.com">Patricio Tula</maintainer>
  <author>Patricio Tula</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>

  <run_depend>kobuki_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>

</package>
