<?xml version="1.0"?>
<package format="2">
  <name>autodocking package</name>
  <version>1.0.0</version>
  <description>The autodocking package</description>
  <author>Patricio Tula</author>
  <maintainer email="ecorbellini@ekumenlabs.com">Ernesto Corbellini</maintainer>
  <maintainer email="jmateu@ekumenlabs.com">Julian Mateu</maintainer>
  <maintainer email="tula.patricio@gmail.com">Patricio Tula</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
