<package>
  <name>leonardo_bringup</name>
  <version>2.4.2</version>
  <description>
     Base functionality for Leonardo. 
  </description>
  <author>Tully Foote</author>
  <maintainer email="ecorbellini@ekumenlabs.com">Ernesto Corbellini</maintainer>
  <maintainer email="jmateu@ekumenlabs.com">Julian Mateu</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_bringup</url>
  <url type="repository">https://github.com/turtlebot/turtlebot</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
  <run_depend>turtlebot_teleop</run_depend>
  <run_depend>laptop_battery_monitor</run_depend>
  <run_depend>leonardo_battery_guard</run_depend>
  <run_depend>image_proc</run_depend>
</package>
